- change some dark mode colors for consistency with sa settings page - fix github logo - straighten the dividing line on suggestion starters - prevent selecting spoilers - dark mode for code blocks - remove 404 <script> - organize discord.css in the same way as style.css - convert all colors to condensed hex form

--- a/assets/style.css
+++ b/assets/style.css
@@ -12,11 +12,12 @@ body {
 		background-color 0.3s ease,
 		color 0.3s ease;
 	margin-left: 10%;
-	background-color: #fff;
+	background-color: #fcfcfc;
 	padding: 4rem 0 0.25rem;
 	width: min(80%, 1024px);
-	color: #333;
+	color: #222;
 }
+
 a {
 	color: var(--theme-color);
 	text-decoration: none;
@@ -24,6 +25,7 @@ a {
 a:hover {
 	text-decoration: solid;
 }
+
 nav {
 	display: flex;
 	position: fixed;
@@ -43,6 +45,7 @@ nav {
 	margin-right: 0.5rem;
 	height: 3rem;
 }
+
 nav a,
 h1 a {
 	color: inherit;
@@ -51,6 +54,30 @@ h1 a:hover {
 	color: var(--theme-color);
 	text-decoration: none;
 }
+
+.chip {
+	display: inline-flex;
+	align-items: center;
+	vertical-align: baseline;
+	border: 1px solid transparent;
+	border-radius: 20px;
+	background-color: #e3e5e8;
+	padding: 0 12px;
+	height: 32px;
+	color: #313338;
+	font-weight: 600;
+	font-size: 14px;
+}
+.chip.selected {
+	border-color: #5865f2;
+	background-color: #e7e9fd;
+}
+.chip .chip-emoji {
+	margin-right: 6px;
+	width: 14px;
+	height: 14px;
+}
+
 .author-info {
 	display: flex;
 	align-items: center;
@@ -66,6 +93,7 @@ h1 a:hover {
 	display: flex;
 	margin-left: auto;
 }
+
 .socials a {
 	margin: 5px;
 	height: 40px;
@@ -76,20 +104,30 @@ h1 a:hover {
 .socials path {
 	transition: fill 0.1s ease-out;
 }
+path.github {
+	fill: #000;
+}
 .socials a:not(:hover) path:first-child {
 	fill: #777;
 }
 
 @media (prefers-color-scheme: dark) {
-	html {
-		--theme-color: #ff9249;
+	.chip {
+		background-color: #2e3238;
+		color: #dcddde;
 	}
+	.chip.selected {
+		border-color: #727efb;
+		background-color: #313363;
+	}
+
 	body {
-		background-color: #121212;
-		color: #e0e0e0;
+		background-color: #222;
+		color: #fff;
 	}
-	h1 a:hover {
-		color: var(--theme-color);
+
+	path.github {
+		fill: #fff;
 	}
 	.socials a:not(:hover) path:first-child {
 		fill: #aaa;
